KB-12671 - NPE issue fix for secretKey and fixed navigation issue in OTP expired scenario (#30)
* KB-12671 Fixed NPE on login page due to secretKey attribute

* KB-12671 Fix for build issue in Jenkins

* KB-12671 Updated error message in few cases

* KB-12671 Added error handling on OTP expired use case

---------

Co-authored-by: Karthikeyan R <karthikeyanr@TI-MAC-118.local>